<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A1B2E"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#F21A1B2E"
        android:padding="10dp"
        android:text="@string/mods_not_modded"
        android:textColor="#FFB74D"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warning"
        app:layout_constraintWidth_percent="0.3">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.tungsten.fcllibrary.component.view.FCLEditText
                android:id="@+id/search_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="#E8EAF6"
                android:textColorHint="#88E8EAF6"
                android:textSize="14sp" />

            <com.tungsten.fcllibrary.component.view.FCLButton
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#F21A1B2E"
                android:textColor="#FFB74D"
                android:text="@string/search"
                app:ripple="true" />

            <com.tungsten.fcllibrary.component.view.FCLCheckBox
                android:id="@+id/enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="#FFB74D"
                android:text="@string/enabled" />

            <com.tungsten.fcllibrary.component.view.FCLCheckBox
                android:id="@+id/disabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textColor="#FFB74D"
                android:text="@string/disabled" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.tungsten.fcllibrary.component.view.FCLLinearLayout
                android:id="@+id/normal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.tungsten.fcllibrary.component.view.FCLButton
                    android:id="@+id/add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F21A1B2E"
                    android:textColor="#FFB74D"
                    android:text="@string/mods_add"
                    app:ripple="true" />

                <com.tungsten.fcllibrary.component.view.FCLButton
                    android:id="@+id/check_update_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#F21A1B2E"
                    android:textColor="#FFB74D"
                    android:text="@string/mods_check_updates"
                    app:ripple="true" />

                <com.tungsten.fcllibrary.component.view.FCLButton
                    android:id="@+id/refresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#F21A1B2E"
                    android:textColor="#FFB74D"
                    android:text="@string/action_refresh"
                    app:ripple="true" />

            </com.tungsten.fcllibrary.component.view.FCLLinearLayout>

            <com.tungsten.fcllibrary.component.view.FCLLinearLayout
                android:id="@+id/selected_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.tungsten.fcllibrary.component.view.FCLButton
                    android:id="@+id/check_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#F21A1B2E"
                    android:textColor="#FFB74D"
                    android:text="@string/mods_check_updates"
                    app:ripple="true" />

                <com.tungsten.fcllibrary.component.view.FCLButton
                    android:id="@+id/delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#F21A1B2E"
                    android:textColor="#FFB74D"
                    android:text="@string/button_remove"
                    app:ripple="true" />

                <com.tungsten.fcllibrary.component.view.FCLButton
                    android:id="@+id/select_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#F21A1B2E"
                    android:textColor="#FFB74D"
                    android:text="@string/button_select_all"
                    app:ripple="true" />

                <com.tungsten.fcllibrary.component.view.FCLButton
                    android:id="@+id/select_invert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#F21A1B2E"
                    android:textColor="#FFB74D"
                    android:text="@string/button_select_invert"
                    app:ripple="true" />

                <com.tungsten.fcllibrary.component.view.FCLButton
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#F21A1B2E"
                    android:textColor="#FFB74D"
                    android:text="@string/button_cancel"
                    app:ripple="true" />

            </com.tungsten.fcllibrary.component.view.FCLLinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/left"
        app:layout_constraintTop_toBottomOf="@id/warning">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F21A1B2E"
            android:divider="#22FFFFFF"
            android:dividerHeight="1px"/>

        <com.tungsten.fcllibrary.component.view.FCLProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
