<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A1B2E"> <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/left"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintWidth_percent="0.3">

        <com.tungsten.fcllibrary.component.view.FCLButton
            app:ripple="true"
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F21A1B2E"
            android:textColor="#FFB74D"
            android:text="@string/button_remove"/>

        <com.tungsten.fcllibrary.component.view.FCLButton
            app:ripple="true"
            android:id="@+id/enable"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F21A1B2E"
            android:textColor="#FFB74D"
            android:text="@string/mods_enable"/>

        <com.tungsten.fcllibrary.component.view.FCLButton
            app:ripple="true"
            android:id="@+id/disable"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F21A1B2E"
            android:textColor="#FFB74D"
            android:text="@string/mods_disable"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.tungsten.fcllibrary.component.view.FCLButton
            app:ripple="true"
            android:id="@+id/add"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F21A1B2E"
            android:textColor="#FFB74D"
            android:text="@string/datapack_add"/>

        <com.tungsten.fcllibrary.component.view.FCLButton
            app:ripple="true"
            android:id="@+id/refresh"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#F21A1B2E"
            android:textColor="#FFB74D"
            android:text="@string/action_refresh"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/left"
        app:layout_constraintEnd_toEndOf="parent">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F21A1B2E"
            android:divider="#22FFFFFF"
            android:dividerHeight="1px"/>

        <com.tungsten.fcllibrary.component.view.FCLProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
