<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A1B2E" 
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="#F21A1B2E"
        android:divider="#22FFFFFF"
        android:dividerHeight="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tungsten.fcllibrary.component.view.FCLLinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.tungsten.fcllibrary.component.view.FCLButton
            android:id="@+id/export"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:backgroundTint="#F21A1B2E"
            android:textColor="#FFB74D"
            android:text="@string/button_export"
            app:ripple="true" />

        <com.tungsten.fcllibrary.component.view.FCLButton
            android:id="@+id/update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:backgroundTint="#F21A1B2E"
            android:textColor="#FFB74D"
            android:text="@string/mods_check_updates_update"
            app:ripple="true" />

        <com.tungsten.fcllibrary.component.view.FCLButton
            android:id="@+id/update_without"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:backgroundTint="#F21A1B2E"
            android:textColor="#FFB74D"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:text="@string/mods_check_updates_update_without"
            app:ripple="true" />

        <com.tungsten.fcllibrary.component.view.FCLButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_weight="1"
            android:backgroundTint="#F21A1B2E"
            android:textColor="#FFB74D"
            android:text="@string/button_cancel"
            app:ripple="true" />

    </com.tungsten.fcllibrary.component.view.FCLLinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
